# gama-chicken-run

./: .gitignore  CMakeLists.txt  EDIIv7.0.c  README.md  artascii-1.md  roteiro_untitled.txt  script.md  untitled.txt
include/: fwindows.h
src/: Makefile.win  fwindows.c  game-chicken-run.dev  game.c  main.c  main.cpp  screenslib.c  screenslib.h
txt/: hello.txt  main_cpp.txt  mwindows.txt
